# WasmEnergyWorkbench

./: README.md
assets/: index.css  index.html  index.js  json.wasm  maingo.wasm
assets/pkg/: package.json  rustsrc.d.ts  rustsrc.js  rustsrc_bg.js  rustsrc_bg.wasm  rustsrc_bg.wasm.d.ts
cmd/server/: go.mod  main.go
cmd/wasm/: go.mod  main.go
cmd/wasm/rustsrc/: Cargo.toml
cmd/wasm/rustsrc/src/: lib.rs  test  test.rs
rustsrc/: Cargo.toml
rustsrc/src/: lib.rs
