[package]
name = "rustsrc"
version = "0.1.0"
authors = ["bsta7599@vt.edu"]
description = "test pack for testing energy consumption and execution time"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.9.8"
wasm-bindgen = "0.2"
